...
        android:gravity="center_vertical"
        android:background="@color/gv_purple"
        android:paddingStart="20dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/product_list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Videojuegos"
            android:textColor="@color/gv_white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="♥︎"
            android:textColor="@color/gv_white"
            android:textSize="24sp"
            android:textStyle="bold" />
...
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
...
